# Programming-problems

./: .gitignore  580C-output.cpp  ProjectEuler  README.md  addNewLine.sh  createOutput.cpp  createOutput.h  createOutputScript.sh  generateOutput.cpp  generateOutput.sh  generateProblem.sh  generateProblemGTest.sh
AdventOfCode/: .gitignore  CMakeLists.txt  README.md  generateDay.sh  runSingleDay.sh
AdventOfCode/2024/Day01/: CmakeLists.txt  Test.cpp  constants.h  solution.cpp  solution.h  solutionOne.cpp  solutionOne.h  solutionTwo.cpp  solutionTwo.h  utils.cpp  utils.h
AdventOfCode/2024/Day02/: CMakeLists.txt  Test.cpp  constants.h  solutionOne.cpp  solutionOne.h  solutionTwo.cpp  solutionTwo.h  utils.cpp  utils.h
AdventOfCode/2024/Day03/: CMakeLists.txt  constants.h  solutionOne.cpp  solutionOne.h  solutionTwo.cpp  solutionTwo.h  utils.cpp  utils.h
AdventOfCode/2024/Day04/: CMakeLists.txt  constants.h  solutionOne.cpp  solutionTwo.cpp  solutionTwo.h
AdventOfCode/2024/Day05/: CMakeLists.txt  Test.cpp  constants.h  solutionOne.cpp  solutionOne.h  solutionTwo.cpp  solutionTwo.h  utils.cpp  utils.h
AdventOfCode/2024/Day06/: CMakeLists.txt  constants.h  solutionOne.cpp  solutionOne.h  solutionTwo.cpp  solutionTwo.h  utils.cpp  utils.h
AdventOfCode/2024/Day07/: CMakeLists.txt  constants.h  solutionOne.cpp  solutionTwo.cpp
AdventOfCode/2024/Day08/: CMakeLists.txt  constants.h  solutionOne.cpp  solutionOne.h  solutionTwo.cpp  solutionTwo.h  utils.cpp  utils.h
AdventOfCode/2024/Day09/: CMakeLists.txt  constants.h  solutionOne.cpp  solutionOne.h  solutionTwo.cpp  solutionTwo.h
AdventOfCode/2024/Day10/: CMakeLists.txt  constants.h  solutionOne.cpp  solutionOne.h  solutionTwo.cpp  solutionTwo.h  utils.cpp  utils.h
AdventOfCode/2024/Day11/: CMakeLists.txt  Test.cpp  constants.h  solutionOne.cpp  solutionOne.h  solutionTwo.cpp  solutionTwo.h
AdventOfCode/2024/Day12/: CMakeLists.txt  Test.cpp  constants.h  solutionOne.cpp  solutionOne.h  solutionTwo.cpp  solutionTwo.h  utils.cpp  utils.h
AdventOfCode/2024/Day13/: CMakeLists.txt  constants.h  solutionOne.cpp  solutionOne.h  solutionTwo.cpp  solutionTwo.h
AdventOfCode/2024/Day14/: CMakeLists.txt  Test.cpp  constants.h  solutionOne.cpp  solutionOne.h  solutionTwo.cpp  solutionTwo.h  utils.h
AdventOfCode/2024/Day15/: CMakeLists.txt  constants.h  solutionOne.cpp  solutionTwo.cpp  solutionTwo.h  utils.h
AdventOfCode/2024/Day16/: CMakeLists.txt  constants.h  solutionOne.cpp  solutionOne.h  solutionTwo.cpp  solutionTwo.h  utils.h
AdventOfCode/2024/Day17/: CMakeLists.txt  Test.cpp  constants.h  solutionOne.cpp  solutionOne.h  solutionTwo.cpp  solutionTwo.h  utils.cpp  utils.h
AdventOfCode/2024/Day18/: CMakeLists.txt  constants.h  solutionOne.cpp  solutionOne.h  solutionTwo.cpp  solutionTwo.h  utils.cpp  utils.h
AdventOfCode/2024/Day19/: CMakeLists.txt  constants.h  solutionOne.cpp  solutionOne.h  solutionTwo.cpp  solutionTwo.h  utils.cpp  utils.h
AdventOfCode/2024/Day20/: CMakeLists.txt  constants.h  solutionOne.cpp  solutionOne.h  solutionTwo.cpp  solutionTwo.h  utils.cpp  utils.h
AdventOfCode/2024/Day21/: CMakeLists.txt  Test.cpp  constants.h  solutionOne.cpp  solutionOne.h  solutionTwo.cpp  solutionTwo.h  utils.cpp  utils.h
AdventOfCode/2024/Day22/: CMakeLists.txt  constants.h  solutionOne.cpp  solutionTwo.cpp  solutionTwo.h  utils.cpp  utils.h
AdventOfCode/2024/Day23/: CMakeLists.txt  Test.cpp  constants.h  solutionOne.cpp  solutionOne.h  solutionTwo.cpp  solutionTwo.h  utils.cpp  utils.h
AdventOfCode/2024/Day24/: CMakeLists.txt  Test.cpp  constants.h  solutionOne.cpp  solutionOne.h  solutionTwo.cpp  solutionTwo.h  utils.cpp  utils.h
AdventOfCode/2024/Day25/: CMakeLists.txt  constants.h  solutionOne.cpp  solutionTwo.cpp
AdventOfCode/ExampleDay/: Test.cpp  constants.h  solution.h
AdventOfCode/common/: CMakeLists.txt  common.cpp  common.h
AdventOfCode/timer/: CMakeLists.txt  main.cpp  main.h  runTiming.sh
AdventOfCode/utils/: CMakeLists.txt  utils.cpp  utils.h
CP-Core-skills/Week-1/1.1-Addition-and-Subtraction/: 1.1-A-a-S.cpp  1.1-A-a-S.h  TEST-1.1-A-a-S.cpp
CP-Core-skills/Week-1/1.2-Erasing-Maximum/: 1.2-EM.cpp  1.2-EM.h  TEST-1.2-EM.cpp
CP-Core-skills/Week-1/1.3-Increment/: 1.3-Inc.cpp  1.3-Inc.h  TEST-1.3-Inc.cpp
CP-Core-skills/Week-1/1.4-Straight-Flush/: 1.4-SF.cpp  1.4-SF.h  TEST-1.4-SF.cpp
CP-Core-skills/Week-2/2.1-Permutation/: 2.1-Permutation.cpp  2.1-Permutation.h  TEST-2.1-Permutation.cpp
CP-Core-skills/Week-2/2.2-Kings/: 2.2-Kings.cpp  2.2-Kings.h  TEST-2.2-Kings.cpp
CP-Core-skills/Week-2/2.3-Minimums/: 2.3-Minimums.cpp  2.3-Minimums.h  TEST-2.3-Minimums.cpp
CodeForces/1200/189A-Ribbon/: 189A-Ribbon.cpp  189A-Ribbon.h  TEST-189A.cpp  output.cpp
CodeForces/1200/433B-Stones/: 433B-Stones.cpp  433B-Stones.h  TEST-433B.cpp  output.cpp
CodeForces/1200/474B-Worms/: TEST.cpp  main.cpp
CodeForces/1200/489B-Bersu-Ball/: 489B-Bersu-Ball.cpp  489B-Bersu-Ball.h  TEST-489B.cpp  output.cpp
CodeForces/1200/514A-Chewbacca-and-Number/: TEST.cpp  main.cpp  main.h
CodeForces/1300/1294C-Product-of-Three-Numbers/: TEST.cpp  main.cpp  main.h
CodeForces/1300/1418B-Negative-Prefix/: 1418B-Negative-Prefix.cpp  1418B-Negative-Prefix.h  TEST-1418B.cpp
CodeForces/1300/230B-T-Primes/: 230B-T-Primes.cpp  230B-T-Primes.h  TEST-230B.cpp
CodeForces/1300/25A-IQ-test/: 25A-IQ-test.cpp  25A-IQ-test.h  TEST-25A.cpp
CodeForces/1300/478B-Random-Teams/: TEST.cpp  (+3 more)
CodeForces/1A-Theatre-Square/: 1A-Theatre-Square.cpp  1A-Theatre-Square.h  TEST-1A.cpp
CodeForces/455A-Boredom/: 455A-Boredom.cpp  455A-Boredom.h  TEST-455A.cpp
CodeForces/4A-Watermelon/: 4A-WaterMelon.cpp  4A-WaterMelon.h  TEST-4A.cpp
Example-vscode/: launch.json  settings.json  tasks.json
Other/: TEST-quick.cpp  quick-sort.cpp  quick-sort.h
Other/BigInteger/: BigInteger.cpp  BigInteger.h  BigIntegerTest.cpp
Other/Sieve/: sieve.cpp  sieve.h
Project-Euler/: PE66.cpp  PE67.cpp  PE68.cpp  PE69.cpp  PE70.cpp  PE71.cpp  PE72.cpp
Rust/: Cargo.toml  README.md
Rust/src/: common.rs  main.rs
Testing/: misc.cpp  misc.h
(+168 files in other folders)
